# auto_readme

./: LICENSE  Pipfile  __init__.py  create_readme_md.py  dev_notes.md  pyproject.toml  readme-format.md  readme.json  readme.md  readme.py
autopyreadme/: readme.py
autopyreadme/create_readme_json/: create_readme_json.py
autopyreadme/create_readme_md/: create_readme_md.py
pyautoreadme/: readme.py
pyautoreadme/create_readme_json/: create_readme_json.py
pyautoreadme/create_readme_md/: create_readme_md.py
