[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autopyreadme"
version = "0.0.2"
authors = [
  { name="Nishant Sharma", email="nishant-ai@outlook.com" },
]
description = "It is an Automated tool for generating Readme for python projects"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/nishant-ai/auto_readme"